--- a/01-tutorials/03-AgentCore-identity/05-Outbound_Auth_3lo/runtime_with_strands_and_egress_3lo.ipynb
+++ b/01-tutorials/03-AgentCore-identity/05-Outbound_Auth_3lo/runtime_with_strands_and_egress_3lo.ipynb
@@ -21,58 +21,6 @@
     "    <img src=\"images/outbound_auth.png\" width=\"90%\"/>\n",
     "</div>\n",
     "\n",
-    "## Resource credential providers\n",
-    "\n",
-    "This is a component that agent code uses to retrieve credentials of downstream resource servers (e.g., Google, GitHub) to access them, e.g., fetch emails from Gmail, add a meeting to Google Calendar.  It removes the heavy-lifting of agent developers implementing 2LO and 3LO OAuth2 orchestration flows across end-users, agent code, and external authorization servers. AgentCore provides both a custom OAuth2 credential provider and a list of built-in providers such Google, GitHub, Slack, Salesforce with authorization server endpoint and provider-specific parameters pre-filled.\n",
-    "  \n",
-    "\n",
-    "Bedrock AgentCore Identity provides OAuth2 and API Key Credential Providers for agent developers to authenticate with external resources that support OAuth2 or API key. In the following example, we will walk you through configuring an API Key credential provider.  An agent can then use the API Key credential provider to retrieve the API key for any agent operations. Please refer to the documentation for the other credential providers.\n",
-    "\n",
-    " ### Creating a resource credential provider.\n",
-    "\n",
-    " Here is an example of creating an OAuth2 resource credential provider. In this example we are creating a credential provider for \"Google\". This is one of the named resource credential providers. You can also configure this credential provider using the AgentCore console.\n",
-    "\n",
-    "```\n",
-    "from bedrock_agentcore.services.identity import IdentityClient\n",
-    "\n",
-    "identity_client = IdentityClient(region)\n",
-    "\n",
-    "# Configure Google OAuth2 provider - On-Behalf-Of User\n",
-    "google_provider = identity_client.create_oauth2_credential_provider({\n",
-    "    \"name\":\"<name-of-your-cred-provider>\",\n",
-    "    \"credentialProviderVendor\":\"GoogleOauth2\",\n",
-    "    \"oauth2ProviderConfigInput\":{\n",
-    "        \"googleOauth2ProviderConfig\": {\n",
-    "            \"clientId\": \"<your-google-client-id>\",\n",
-    "            \"clientSecret\": \"<your-google-client-secret>\"\n",
-    "        }\n",
-    "    }\n",
-    "})\n",
-    "print(google_provider)\n",
-    "\n",
-    "```\n",
-    "\n",
-    " ### Retrieving OAuth2 access tokens with the Resource credential provider.\n",
-    "\n",
-    "Here is an example of retrieving the OAuth2 access tokens from the credential provider. The agent can then use the access token to interact with resources protected by OAuth. e.g: in our example , this is Google calendar and the scope is readonly. In order to retrieve credentials like access_token from the credential provider, you can decorate your function as shown below.\n",
-    "\n",
-    "```\n",
-    "import asyncio\n",
-    "from bedrock_agentcore.identity.auth import requires_access_token, requires_api_key\n",
-    "\n",
-    "# This annotation helps agent developer to obtain access tokens from external applications\n",
-    "@requires_access_token(\n",
-    "    provider_name=\"<name-of-your-cred-provider>\",\n",
-    "    scopes=[\"https://www.googleapis.com/auth/calendar.readonly\"], # Google OAuth2 scopes\n",
-    "    auth_flow=\"USER_FEDERATION\", # On-behalf-of user (3LO) flow\n",
-    "    on_auth_url=lambda x: print(\"\\nPlease copy and paste this URL in your browser:\\n\" + x), # prints authorization URL to console\n",
-    "    force_authentication=True,\n",
-    ")\n",
-    "async def need_token_3LO_async(*, access_token: str):\n",
-    "    print(access_token)\n",
-    "\n",
-    "asyncio.run(need_token_3LO_async(access_token=\"\"))\n",
-    "```\n",
     "\n",
     "Here are the various parameters you can use with the @require_access_token decorator.\n",
     "\n",
@@ -140,8 +88,7 @@
     "* AWS credentials\n",
     "* Amazon Bedrock AgentCore SDK\n",
     "* Strands Agents\n",
-    "* Docker running\n",
-    "* Enable model access for Claude 3.7 Sonnet v1, i.e. \"us.anthropic.claude-3-7-sonnet-20250219-v1:0\". For more details refer to [Add or remove access to Amazon Bedrock foundation models](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access-modify.html)"
+    "* Docker running"
    ]
   },
   {
@@ -457,8 +404,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile strands_claude_google_3lo.py\n",
-    "import os\n",
+    "# Get the OAuth2 callback URL based on the current environment (notebook/SageMaker)\n",
+    "# This is evaluated HERE in the notebook, not in the agent container\n",
+    "from oauth2_callback_server import get_oauth2_callback_url\n",
+    "oauth2_callback_url_for_agent = get_oauth2_callback_url()\n",
+    "\n",
+    "print(f\"Callback URL for agent (determined from notebook environment): {oauth2_callback_url_for_agent}\")\n",
+    "\n",
+    "# Write strands_claude_google_3lo.py with the callback URL embedded as a string literal\n",
+    "google_agent_code = f'''import os\n",
     "import datetime\n",
     "import json\n",
     "import asyncio\n",
@@ -468,7 +422,6 @@
     "from strands import Agent, tool\n",
     "from bedrock_agentcore.runtime import BedrockAgentCoreApp\n",
     "from bedrock_agentcore.identity.auth import requires_access_token\n",
-    "from oauth2_callback_server import get_oauth2_callback_url\n",
     "\n",
     "from google.oauth2.credentials import Credentials\n",
     "from googleapiclient.discovery import build\n",
@@ -500,11 +453,11 @@
     "    \n",
     "    # Check if we already have a token\n",
     "    if not google_access_token:\n",
-    "        return json.dumps({\n",
+    "        return json.dumps({{\n",
     "            \"auth_required\": True,\n",
     "            \"message\": \"Google Calendar authentication is required. Please wait while we set up the authorization.\",\n",
     "            \"events\": []\n",
-    "        })\n",
+    "        }})\n",
     "    \n",
     "    # Create credentials from the provided access token\n",
     "    creds = Credentials(token=google_access_token, scopes=SCOPES)\n",
@@ -533,16 +486,16 @@
     "        events = events_result.get(\"items\", [])\n",
     "\n",
     "        if not events:\n",
-    "            return json.dumps({\"events\": []})\n",
+    "            return json.dumps({{\"events\": []}})\n",
     "\n",
-    "        return json.dumps({\"events\": events})\n",
+    "        return json.dumps({{\"events\": events}})\n",
     "        \n",
     "    except HttpError as error:\n",
     "        error_message = str(error)\n",
-    "        return json.dumps({\"error\": error_message, \"events\": []})\n",
+    "        return json.dumps({{\"error\": error_message, \"events\": []}})\n",
     "    except Exception as e:\n",
     "        error_message = str(e)\n",
-    "        return json.dumps({\"error\": error_message, \"events\": []})\n",
+    "        return json.dumps({{\"error\": error_message, \"events\": []}})\n",
     "\n",
     "\n",
     "# Initialize the agent with tools and your preferred model choice\n",
@@ -585,8 +538,8 @@
     "\n",
     "async def on_auth_url(url: str) -> None:\n",
     "    \"\"\"Handle authorization URL callback.\"\"\"\n",
-    "    print(f\"Authorization url: {url}\")\n",
-    "    await queue.put(f\"Authorization url: {url}\")\n",
+    "    print(f\"Authorization url: {{url}}\")\n",
+    "    await queue.put(f\"Authorization url: {{url}}\")\n",
     "\n",
     "\n",
     "async def agent_task(user_message: str) -> None:\n",
@@ -633,13 +586,13 @@
     "                # Retry the agent call now that we have authentication\n",
     "                response = agent(user_message)\n",
     "            except Exception as auth_error:\n",
-    "                print(f\"auth_error: {auth_error}\")\n",
-    "                await queue.put(f\"Authentication failed: {str(auth_error)}\")\n",
+    "                print(f\"auth_error: {{auth_error}}\")\n",
+    "                await queue.put(f\"Authentication failed: {{str(auth_error)}}\")\n",
     "        \n",
     "        await queue.put(response.message)\n",
     "        await queue.put(\"End agent execution\")\n",
     "    except Exception as e:\n",
-    "        await queue.put(f\"Error: {str(e)}\")\n",
+    "        await queue.put(f\"Error: {{str(e)}}\")\n",
     "    finally:\n",
     "        await queue.finish()\n",
     "\n",
@@ -650,7 +603,7 @@
     "    auth_flow='USER_FEDERATION',\n",
     "    on_auth_url=on_auth_url,\n",
     "    force_authentication=True,\n",
-    "    callback_url=get_oauth2_callback_url()\n",
+    "    callback_url=\"{oauth2_callback_url_for_agent}\"  # ← Callback URL determined from notebook environment\n",
     ")\n",
     "async def need_token_3lo_async(*, access_token: str) -> str:\n",
     "    \"\"\"\n",
@@ -699,7 +652,14 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run()"
+    "    app.run()\n",
+    "'''\n",
+    "\n",
+    "# Write the file\n",
+    "with open(\"strands_claude_google_3lo.py\", \"w\") as f:\n",
+    "    f.write(google_agent_code)\n",
+    "\n",
+    "print(\"✅ strands_claude_google_3lo.py written successfully with embedded callback URL\")"
    ]
   },
   {
@@ -835,6 +795,60 @@
     "        allowed_resource_oauth_2_return_urls=[*allowed_resource_oauth_2_return_urls, oauth2_callback_url],\n",
     "    )\n",
     "    print(updated_workload_identity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de52f71e",
+   "metadata": {},
+   "source": [
+    "#### Add extra required policies to auto-created role\n",
+    "\n",
+    "If you are using this on a new account where model has not been accessed before, you will need to add extra required policies to the auto-created role to allow the agent to access the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e3fc5f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "agentcore_control_client = boto3.client(\n",
+    "    'bedrock-agentcore-control',\n",
+    "    region_name=region\n",
+    ")\n",
+    "\n",
+    "runtime_response = agentcore_control_client.get_agent_runtime(\n",
+    "    agentRuntimeId=launch_result.agent_id\n",
+    ")\n",
+    "runtime_role = runtime_response['roleArn']\n",
+    "\n",
+    "policies_to_add = {\n",
+    "    \"Version\": \"2012-10-17\",\n",
+    "    \"Statement\": [\n",
+    "        {\n",
+    "            \"Sid\": \"BedrockModelAccess\",\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": [\n",
+    "                \"aws-marketplace:ViewSubscriptions\",\n",
+    "                \"aws-marketplace:Subscribe\"\n",
+    "            ],\n",
+    "            \"Resource\": \"*\"\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "iam_client = boto3.client(\n",
+    "    'iam',\n",
+    "    region_name=region\n",
+    ")\n",
+    "\n",
+    "response = iam_client.put_role_policy(\n",
+    "    PolicyDocument=json.dumps(policies_to_add),\n",
+    "    PolicyName=\"outbound_policies\",\n",
+    "    RoleName=runtime_role.split(\"/\")[1],\n",
+    ")"
    ]
   },
   {
@@ -1084,7 +1098,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1098,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
